--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,53 +6,36 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.min.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
             rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+			integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
             integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
             integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jquery.growl@1.3.5/javascripts/jquery.growl.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.growl@1.3.5/stylesheets/jquery.growl.css">
 
     <script src="app/app.js"></script>
+	<script src="app/controllers/todo-list-controller.js"></script>
+	<script src="app/controllers/todo-add-controller.js"></script>
     <script src="app/directives/card_directive.js"></script>
     <script src="app/directives/card_emptiness_directives.js"></script>
     <script src="app/directives/modal_directives.js"></script>
     <script src="app/services/todo_services.js"></script>
 	<script src="app/services/modal_services.js"></script>
-    <script src="app/controller.js"></script>
 </head>
 <body>
-    <div class="container" ng-app="todoApp" ng-controller="todoCtrl">
+    <div class="container" ng-app="TodoMainApp">
         <h1 class="display-3 my-5">Test Todo application</h1>
-        <div class="table">
-            <div class="row border border-secondary rounded">
-				<div class="col" ng-repeat="phase in phase_labels">
-					<h1 class="display-5 mt-1 mb-3">{{phase}}</h1>
-					<div ng-if="todo_list[$index].length">
-						<div ng-repeat="todo in todo_list[$index]">
-							<tsz-card content="{{todo}}"></tsz-card>
-						</div>
-					</div>
-					<tsz-todo-emptiness-indicator ng-if="!todo_list[$index].length"></tsz-todo-emptiness-indicator>
-				</div>
-            </div>
-        </div>
-        <div class="d-grid gap-2 w-25 my-2">
-            <button type="button" class="btn btn-primary" ng-click="addTodo()"
-                    data-toggle="tooltip" data-placement="bottom" title="Add new Todo">
-                <i class="fas fa-plus"></i>
-            </button>
-            <button type="button" class="btn btn-danger btn-sm" ng-click="removeAllTodos()"
-                    data-toggle="tooltip" data-placement="bottom" title="Remove all Todos">
-                <i class="fas fa-broom"></i>
-            </button>
-        </div>
+		<ng-view/>
     </div>
     <div>
         <tsz-todo-modal modalprefix="add" modaltitle="Add Todo"
