#41 Transition to AngularJS new file: global_service.js - for separating variables and functions used from everywhere, added to index.html app.js: attempt to use routeParams for todo-add-controller.js todo-add-controller.js: fill in modal fields, use GlobalService instead of $rootScope card_directive.js: replaced $rootScope to GlobalService todo-add-tpl.html: phases generated from GlobalService variable todo-list-controller.js: moved some of $rootScope assignments to GlobalService

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.growl@1.3.5/stylesheets/jquery.growl.css">
 
     <script src="app/app.js"></script>
+	<script src="app/services/global_service.js"></script>
 	<script src="app/services/todo_services.js"></script>
 	<script src="app/services/modal_services.js"></script>
 	<script src="app/controllers/todo-list-controller.js"></script>
