#41 Transition to AngularJS app.js: removed routing groups card_directive.js: moved phasenum to toolbar directive, removed rootScope usage (using $location), toolbar directive parameters changed card_tpl.html: changed toolbar directive parameters global_service.js: removed $http + added descriptionMaxLength todo-add-controller.js: added submit-dismiss action + reference to GlobalService variable todo-add-tpl.html: added buttons todo-details-controller.js: added logic similar to todo-add-controller.js todo-details-tpl.html: copied todo-details-tpl.html with changes todo-list-controller.js: removed rootScope function definition + rootScope injection removed todo_services.js: addTodo implemented + editTodo stub

--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -29,8 +29,7 @@
                 </ul>
             </li>
             <li class="list-group-item">
-                <tsz-card-toolbar id="{{ id }}" name="{{ name }}"
-                        phase="{{ phase }}" phasenum="{{ phasenum }}"></tsz-card-toolbar>
+                <tsz-card-toolbar content="{{ content }}"></tsz-card-toolbar>
             </li>
         </ul>
     </div>
