#41 Transition to AngularJS new controller-template pair for Todo removing route deleted card_toolbar_tpl.html because merged into card_tpl.html index.html: added script dependency app.js: new routing path for removing Todos card_directive.js: merge card and toolbar template + modified edit-remove-shift functions todo-add-controller.js: growl messages todo-details-controller.js: working request for Todo editing (almost) + growl messages todo-details-tpl.html: renamed add prefix to edit + attempt for phase radio buttons todo_services.js: implemented edit-remove Todo functions

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,6 +30,7 @@
 	<script src="app/controllers/todo-list-controller.js"></script>
 	<script src="app/controllers/todo-add-controller.js"></script>
 	<script src="app/controllers/todo-details-controller.js"></script>
+	<script src="app/controllers/todo-remove-controller.js"></script>
 	<script src="app/controllers/task-add-controller.js"></script>
 	<script src="app/controllers/task-details-controller.js"></script>
     <script src="app/directives/card_directive.js"></script>
