--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -17,9 +17,20 @@
             <li class="list-group-item">
                 <ul class="list-group border border-primary"
                         data-toggle="tooltip" data-placement="bottom" title="Task list">
-                    <li class="list-group-item" ng-repeat="task in tasks" ng-if="taskCount">
-                        {{ task.name }}
-                    </li>
+                    <li class="list-group-item d-flex justify-content-between" ng-repeat="task in tasks" ng-if="taskCount">
+						<div>
+							<button type="button" class="btn btn-danger btn-sm text-end" onclick="removeTask({{ task }})"
+									data-toggle="tooltip" data-placement="bottom" title="Remove Task"
+									ng-if="!readonlyTodo && !readonlyTask">
+								<i class="fas fa-trash-alt"></i>
+							</button>
+							{{ task.name }}
+						</div>
+						<input class="form-check-input" type="checkbox" ng-checked="task.done"
+							   data-toggle="tooltip" data-placement="bottom" title="Check Task"
+							   ng-click="checkTask({{ task }})"
+							   ng-if="!readonlyTodo && !readonlyTask">
+					</li>
                     <li class="list-group-item" ng-if="!taskCount">
                         <tsz-task-emptiness-indicator></tsz-task-emptiness-indicator>
                     </li>
@@ -28,7 +39,7 @@
 					</li>
                 </ul>
             </li>
-            <li class="list-group-item">
+            <li class="list-group-item" ng-if="!readonlyTodo">
 				<div class="d-flex justify-content-between">
 					<div class="btn-group" role="group">
 						<button type="button" class="btn btn-primary btn-sm text-end" ng-click="prepareAddTaskModal()"
