--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,8 +31,10 @@
 	<script src="app/controllers/todo-add-controller.js"></script>
 	<script src="app/controllers/todo-details-controller.js"></script>
 	<script src="app/controllers/todo-remove-controller.js"></script>
+	<script src="app/controllers/todo-removeall-controller.js"></script>
 	<script src="app/controllers/task-add-controller.js"></script>
 	<script src="app/controllers/task-details-controller.js"></script>
+	<script src="app/controllers/task-removeall-controller.js"></script>
     <script src="app/directives/card_directive.js"></script>
     <script src="app/directives/card_emptiness_directives.js"></script>
     <script src="app/directives/modal_directives.js"></script>
