#41 Transition to AngularJS NEW: remove all Todos, Task details (read-only) FIX: growl messages in Task operations (checkTask, removeTask) NEW: show Task ID in card template + edit button + disable removeAllTasks button if no Tasks FIX: rename remove to removeAll in some places FIX: removed unnecessary injections for each controllers FIX: names in form templates

--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -19,12 +19,17 @@
                         data-toggle="tooltip" data-placement="bottom" title="Task list">
                     <li class="list-group-item d-flex justify-content-between" ng-repeat="task in tasks" ng-if="taskCount">
 						<div>
+							<button type="button" class="btn btn-primary btn-sm text-end" ng-click="prepareEditTaskModal(task)"
+									data-toggle="tooltip" data-placement="bottom" title="View Task details">
+								<i class="fas fa-pencil-alt"></i>
+							</button>
 							<button type="button" class="btn btn-danger btn-sm text-end" ng-click="removeTask(task)"
 									data-toggle="tooltip" data-placement="bottom" title="Remove Task"
 									ng-if="!readonlyTodo && !readonlyTask">
 								<i class="fas fa-trash-alt"></i>
 							</button>
-							{{ task.name }}
+							<span class="text-muted">#{{ task.id + 1 }}</span>
+							<span>{{ task.name }}</span>
 						</div>
 						<input class="form-check-input" type="checkbox" ng-checked="task.done"
 							   data-toggle="tooltip" data-placement="bottom" title="Check Task"
@@ -56,7 +61,7 @@
 							<i class="fas fa-trash-alt"></i>
 						</button>
 						<button type="button" class="btn btn-danger btn-sm text-end" ng-click="prepareRemoveAllTasksConfirmModal()"
-								data-toggle="tooltip" data-placement="bottom" title="Remove All Tasks">
+								data-toggle="tooltip" data-placement="bottom" title="Remove All Tasks" ng-disabled="!taskCount">
 							<i class="fas fa-broom"></i>
 						</button>
 					</div>
