#41 Transition to AngularJS card_tpl.html: disable task buttons within group global_service.js: set common options to default task-add-controller.js, todo-add-controller.js, todo-details-controller.js: focus on name field task-details-tpl.html: fixed checkbox display todo-list-controller.js, todo-list-tpl.html: basics of sorting Todos

--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -19,15 +19,16 @@
                         data-toggle="tooltip" data-placement="bottom" title="Task list">
                     <li class="list-group-item d-flex justify-content-between" ng-repeat="task in tasks" ng-if="taskCount">
 						<div>
-							<button type="button" class="btn btn-primary btn-sm text-end" ng-click="prepareEditTaskModal(task)"
-									data-toggle="tooltip" data-placement="bottom" title="View Task details">
-								<i class="fas fa-pencil-alt"></i>
-							</button>
-							<button type="button" class="btn btn-danger btn-sm text-end" ng-click="removeTask(task)"
-									data-toggle="tooltip" data-placement="bottom" title="Remove Task"
-									ng-if="!readonlyTodo && !readonlyTask">
-								<i class="fas fa-trash-alt"></i>
-							</button>
+							<span ng-if="!readonlyTodo && !readonlyTask">
+								<button type="button" class="btn btn-primary btn-sm text-end" ng-click="prepareEditTaskModal(task)"
+										data-toggle="tooltip" data-placement="bottom" title="View Task details">
+									<i class="fas fa-pencil-alt"></i>
+								</button>
+								<button type="button" class="btn btn-danger btn-sm text-end" ng-click="removeTask(task)"
+										data-toggle="tooltip" data-placement="bottom" title="Remove Task">
+									<i class="fas fa-trash-alt"></i>
+								</button>
+							</span>
 							<span class="text-muted">#{{ task.id + 1 }}</span>
 							<span>{{ task.name }}</span>
 						</div>
