--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -15,11 +15,11 @@
                 <p class="card-text">Description length: {{ descriptionLength }}</p>
             </li>
             <li class="list-group-item">
-				<button class="btn btn-secondary mb-3" type="button"
+				<button class="btn btn-secondary mb-3" type="button" ng-click="toggleCollapse(id)"
 						data-bs-toggle="collapse" data-bs-target="#task-list-{{id}}-collapse"
 						data-toggle="tooltip" data-placement="bottom" title="Toggle Task list">
-					<i ng-if="todo_expand_status[value.id]" class="fas fa-folder-minus"></i>
-					<i ng-if="!todo_expand_status[value.id]" class="fas fa-folder-plus"></i>
+					<i ng-if="todo_expand_status[id]" class="fas fa-folder-minus"></i>
+					<i ng-if="!todo_expand_status[id]" class="fas fa-folder-plus"></i>
 				</button>
 				<div id="task-list-{{id}}-collapse" class="collapse">
 					<ul class="list-group border border-primary"
