--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -24,7 +24,8 @@
 				<div id="task-list-{{id}}-collapse" class="collapse">
 					<ul class="list-group border border-primary"
 							data-toggle="tooltip" data-placement="bottom" title="Task list">
-						<li class="list-group-item d-flex justify-content-between" ng-repeat="task in tasks" ng-if="taskCount">
+						<li class="list-group-item d-flex justify-content-between" ng-if="taskCount"
+								ng-repeat="task in tasks | orderBy:task_sort_field:task_sort_dir">
 							<div>
 								<span ng-if="!readonlyTodo && !readonlyTask">
 									<button type="button" class="btn btn-primary btn-sm text-end" ng-click="prepareEditTaskModal(task)"
