#50 Remove moment.js from AngularJS version of webapp FIX: removed commented <script> tags from index.html FIX: removed watch function from card_directive.js

--- a/src/main/webapp/app/directives/card_tpl.html
+++ b/src/main/webapp/app/directives/card_tpl.html
@@ -92,8 +92,8 @@
         </ul>
     </div>
     <div class="card-footer text-muted">
-        <p>Updated {{ datemodified }}</p>
-        <p ng-if="showDateCreated">Created {{ datecreated }}</p>
+        <p>Date updated: {{ datemodified | date:customDateFormat }}</p>
+        <p ng-if="showDateCreated">Date created: {{ datecreated | date:customDateFormat }}</p>
     </div>
 </div>
 <tsz-card-invalid ng-if="!isCardValid"></tsz-card-invalid>
