renamed webapp folders + base url in controllers and web apps + changed phase Todo to Backlog in jQuery web app

--- a/src/main/webapp_jquery/index.html
+++ b/src/main/webapp_jquery/index.html
@@ -46,7 +46,7 @@
 	<div class="row">
 		<div class="col">
 			<div>
-				<h1 class="display-5 my-5">Todo</h1>
+				<h1 class="display-5 my-5">Backlog</h1>
 				<div id="todo-container-phase0"></div>
 				<div class="d-grid gap-2">
 					<button class="btn btn-primary" onclick="App.prepareAddTodoModal(true)" data-bs-toggle="modal" data-bs-target="#addTodoModal"
